--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "959cb75a-32de-4d34-bcdc-4687a1c9f155",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "186b954f-dd38-495a-a5e7-30b0cced502b",
    "metadata": {},
    "outputs": [],
@@ -20,20 +20,15 @@
     "import xarray\n",
     "import numpy\n",
     "import torch\n",
-    "from torch import nn\n",
-    "from torch.utils.data import DataLoader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d42f5125-2bc7-40de-81d3-35df05fa38d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(base_dir+'functions/')\n",
-    "from train_utils import NeuralNetwork, train, val"
+    "import torchinfo\n",
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "\n",
+    "from model.train_utils import NeuralNetwork\n",
+    "import utils.utils\n",
+    "from trainer.trainer import Trainer\n",
+    "import model.metrics as module_metric\n",
+    "from data_prep.data_loader import MakeDataset"
    ]
   },
   {
@@ -43,49 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_gpu(gpu_id):\n",
-    "    os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"\n",
-    "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(gpu_id)\n",
-    "    \n",
-    "gpu_id=0\n",
-    "\n",
-    "if gpu_id >= 0:\n",
-    "    device = \"cuda\"\n",
-    "    set_gpu(gpu_id)\n",
-    "    print('device available :', torch.cuda.is_available())\n",
-    "    print('device count: ', torch.cuda.device_count())\n",
-    "    print('current device: ',torch.cuda.current_device())\n",
-    "    print('device name: ',torch.cuda.get_device_name())\n",
-    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "else:\n",
-    "    device = torch.device('cpu')\n",
-    "\n",
-    "#Additional Info when using cuda\n",
-    "if device.type == 'cuda':\n",
-    "    print(torch.cuda.get_device_name(0))\n",
-    "    print('Memory Usage:')\n",
-    "    print('Allocated:', round(torch.cuda.memory_allocated(0)/1024**3,1), 'GB')\n",
-    "    print('Cached:   ', round(torch.cuda.memory_reserved(0)/1024**3,1), 'GB')\n",
-    "\n",
-    "print('using device: ', device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4b72ffe-3b0d-45b4-b250-aa49bea48e9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MakeDataset(Dataset):\n",
-    "    def __init__(self, X, y):\n",
-    "        self.X = torch.nan_to_num(torch.tensor(X[randi], dtype=torch.float32))\n",
-    "        self.y = torch.tensor(np.mean(y[randi,ilat:flat,ilon:flon],axis=(1,2)), dtype=torch.float32)\n",
-    "    def __len__(self):\n",
-    "        return len(self.X)\n",
-    "    \n",
-    "    def __getitem__(self, idx):\n",
-    "        return self.X[idx].unsqueeze(0), self.y[idx].unsqueeze(0)"
+    "torch.cuda.is_available()"
    ]
   },
   {
@@ -95,15 +48,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 5\n",
-    "BATCH_SIZE = 64\n",
-    "LR = 1e-3\n",
+    "config = utils.get_config(\"exp_foo\")\n",
     "\n",
-    "model = NeuralNetwork().to(device)\n",
-    "\n",
-    "loss_fn = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.SGD(model.parameters(), lr=LR)\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=3, verbose=True)"
+    "torch.manual_seed(config[\"seed\"])\n",
+    "torch.cuda.manual_seed(config[\"seed\"])\n",
+    "np.random.seed(config[\"seed\"])\n",
+    "random.seed(config[\"seed\"])\n",
+    "torch.backends.cudnn.deterministic = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3e0c151f-25a5-4d4c-ad70-d1f3ddd432a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## NEED TO LOAD DATA\n",
+    "\n"
    ]
   },
   {
@@ -113,14 +75,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Training Data!\n",
-    "training_data = SpatialDataset(np_arr_x_train_anom, np_arr_y_train_anom )\n",
-    "train_dataloader = DataLoader(training_data,batch_size = BATCH_SIZE)\n",
+    "## Prep training and validation for ANN\n",
+    "# !!!NOTE: currently assuming that xtrain, ytrain, xval and yval are numpy!!!\n",
+    "training_data = MakeDataset(xtrain,ytrain)\n",
+    "val_data = TensorDataset(xval,yval)\n",
     "\n",
-    "## Validation Data!\n",
-    "val_data = SpatialDataset(np_arr_x_val_anom, np_arr_y_val_anom)\n",
-    "val_dataloader  = DataLoader(val_data,batch_size = BATCH_SIZE)\n",
-    "\n"
+    "train_dataloader = DataLoader(training_data,batch_size = config[\"data_loader\"][\"batch_size\"],shuffle=True)\n",
+    "val_dataloader  = DataLoader(val_data,batch_size = config[\"data_loader\"][\"batch_size\"],shuffle=True)"
    ]
   },
   {
@@ -130,19 +91,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for e in range(EPOCHS):\n",
-    "    print(f\"Epoch {e+1}\\n-------------------------------\")\n",
-    "    train(train_dataloader, model, loss_fn, optimizer)\n",
-    "    test(val_dataloader, model, loss_fn)\n",
-    "print(\"Done!\")"
+    "## create NN architecture\n",
+    "model = NeuralNetwork(config=config[\"arch\"])\n",
+    "\n",
+    "## grab optimizer and loss \n",
+    "optimizer = getattr(torch.optim, config[\"optimizer\"][\"type\"])(\n",
+    "    model.parameters(), **config[\"optimizer\"][\"args\"]\n",
+    ")\n",
+    "criterion = getattr(torch.nn, config[\"criterion\"])()\n",
+    "\n",
+    "metric_funcs = [getattr(module_metric, met) for met in config[\"metrics\"]]\n",
+    "\n",
+    "## Build the trainer\n",
+    "device = utils.prepare_device(config[\"device\"])\n",
+    "trainer = Trainer(\n",
+    "    model,\n",
+    "    criterion,\n",
+    "    metric_funcs,\n",
+    "    optimizer,\n",
+    "    max_epochs=config[\"trainer\"][\"max_epochs\"],\n",
+    "    data=train_dataloader,\n",
+    "    validation_data=val_dataloader,\n",
+    "    device=device,\n",
+    "    config=config,\n",
+    ")\n",
+    "\n",
+    "# Visualize the model\n",
+    "torchinfo.summary(\n",
+    "    model,\n",
+    "    input_size=(config[\"data_loader\"][\"batch_size\"], 1),\n",
+    "    verbose=1,\n",
+    "    col_names=(\"input_size\", \"output_size\", \"num_params\"),\n",
+    ")\n",
+    "\n",
+    "# Train the Model\n",
+    "model.to(device)\n",
+    "trainer.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a2b8773-4894-4e8c-97fb-5c6ee580933e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(trainer.log.history.keys())\n",
+    "\n",
+    "plt.figure(figsize=(20, 4))\n",
+    "for i, m in enumerate((\"loss\", *config[\"metrics\"])):\n",
+    "    plt.subplot(1, 4, i + 1)\n",
+    "    plt.plot(trainer.log.history[\"epoch\"], trainer.log.history[m], label=m)\n",
+    "    plt.plot(\n",
+    "        trainer.log.history[\"epoch\"], trainer.log.history[\"val_\" + m], label=\"val_\" + m\n",
+    "    )\n",
+    "    plt.axvline(\n",
+    "        x=trainer.early_stopper.best_epoch, linestyle=\"--\", color=\"k\", linewidth=0.75\n",
+    "    )\n",
+    "    plt.title(m)\n",
+    "    plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a9d02f2-5e38-4fdd-baef-254e5ba09ed9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "preds = model(x_test)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ViT_XAI]",
+   "display_name": "MLWPS",
    "language": "python",
-   "name": "conda-env-ViT_XAI-py"
+   "name": "mlwps"
   },
   "language_info": {
    "codemirror_mode": {
@@ -154,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
