got CNN to train

--- a/train.ipynb
+++ b/train.ipynb
@@ -32,7 +32,7 @@
     "from utils.utils import prepare_device\n",
     "from trainer.trainer import Trainer\n",
     "import model.metrics as module_metric\n",
-    "from data_prep.data_loader import GetData,MakeDataset,lead_shift, concat_input"
+    "from data_prep.data_loader import GetData,CustomDataset,lead_shift, concat_input"
    ]
   },
   {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "56953f61-bc6e-477e-bcce-6a5cf23d21f3",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "3e0c151f-25a5-4d4c-ad70-d1f3ddd432a0",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "fea1995c-49af-4621-8b7f-3b7a10d2659a",
    "metadata": {},
    "outputs": [],
@@ -183,25 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "56bbd262-3ba4-44f5-b4a1-1f3f60a104f1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/glade/work/kjmayer/research/catalyst/S2S_ocn_lnd_atm/data_prep/data_loader.py:83: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  self.X = torch.tensor(torch.from_numpy(X), dtype = torch.float32)#.unsqueeze(1)\n",
-      "/glade/work/kjmayer/research/catalyst/S2S_ocn_lnd_atm/data_prep/data_loader.py:84: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  self.y = torch.tensor(torch.from_numpy(X), dtype = torch.float32) # unsqueeze?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Prep training and validation for ANN\n",
-    "training_data = MakeDataset(Xtrain,Ytrain) #xtrain, ytrain need to be numpy, not xarray\n",
-    "val_data = MakeDataset(Xval,Yval)\n",
+    "training_data = CustomDataset(Xtrain,Ytrain) #xtrain, ytrain need to be numpy, not xarray\n",
+    "val_data = CustomDataset(Xval,Yval)\n",
     "\n",
     "#[batch_size,channels,lat,lon]\n",
     "train_dataloader = DataLoader(training_data,batch_size = config[\"data_loader\"][\"batch_size\"],shuffle=True)\n",
@@ -210,34 +199,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8beea90f-9f06-4079-960f-7bacc718d7c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 96, 144])\n",
+      "torch.Size([2448])\n",
+      "torch.Size([32, 2, 96, 144])\n",
+      "torch.Size([32, 2448])\n"
+     ]
+    }
+   ],
    "source": [
-    "for input, output in val_dataloader:\n",
-    "    print(input)\n",
-    "    print(output)\n",
-    "    break"
+    "# check shapes\n",
+    "for input, output in training_data:\n",
+    "    print(np.shape(input))\n",
+    "    print(np.shape(output))\n",
+    "    break\n",
+    "\n",
+    "train_features, train_labels = next(iter(train_dataloader))\n",
+    "print(np.shape(train_features))\n",
+    "print(np.shape(train_labels))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "11a40d16-8128-4396-9eed-cd274813ff00",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Flatten' object has no attribute 'size'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m## create NN architecture\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mNeuralNetwork\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43march_atm\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m## grab optimizer and loss \u001b[39;00m\n\u001b[1;32m      5\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(torch\u001b[38;5;241m.\u001b[39moptim, config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moptimizer\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m\"\u001b[39m])(\n\u001b[1;32m      6\u001b[0m     model\u001b[38;5;241m.\u001b[39mparameters(), \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moptimizer\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124margs\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m      7\u001b[0m )\n",
-      "File \u001b[0;32m/glade/work/kjmayer/research/catalyst/S2S_ocn_lnd_atm/model/train_utils.py:76\u001b[0m, in \u001b[0;36mNeuralNetwork.__init__\u001b[0;34m(self, config)\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[38;5;66;03m# Flat layer\u001b[39;00m\n\u001b[1;32m     75\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mflat \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mFlatten(start_dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m---> 76\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflat\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m())\n\u001b[1;32m     77\u001b[0m \u001b[38;5;66;03m# Input Dense blocks\u001b[39;00m\n\u001b[1;32m     78\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdenseblock \u001b[38;5;241m=\u001b[39m dense_block(\n\u001b[1;32m     79\u001b[0m     config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhiddens_block\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m     80\u001b[0m     config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhiddens_block_act\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m     81\u001b[0m     in_features\u001b[38;5;241m=\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhiddens_block_in\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m     82\u001b[0m )\n",
-      "File \u001b[0;32m/glade/work/wchapman/miniconda3.1/envs/MLWPS/lib/python3.11/site-packages/torch/nn/modules/module.py:1695\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1693\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[1;32m   1694\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1695\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Flatten' object has no attribute 'size'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/glade/work/wchapman/miniconda3.1/envs/MLWPS/lib/python3.11/site-packages/torch/nn/modules/lazy.py:180: UserWarning: Lazy modules are a new feature under heavy development so changes to the API or functionality can happen at any moment.\n",
+      "  warnings.warn('Lazy modules are a new feature under heavy development '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================================================================================================================\n",
+      "Layer (type:depth-idx)                   Input Shape               Output Shape              Param #\n",
+      "===================================================================================================================\n",
+      "NeuralNetwork                            [32, 2, 96, 144]          [32, 2448]                --\n",
+      "├─CircularPad2d: 1-1                     [32, 2, 96, 144]          [32, 2, 96, 154]          --\n",
+      "├─Sequential: 1-2                        [32, 2, 96, 154]          [32, 32, 24, 39]          --\n",
+      "│    └─Sequential: 2-1                   [32, 2, 96, 154]          [32, 32, 48, 77]          --\n",
+      "│    │    └─Conv2d: 3-1                  [32, 2, 96, 154]          [32, 32, 96, 154]         1,632\n",
+      "│    │    └─ReLU: 3-2                    [32, 32, 96, 154]         [32, 32, 96, 154]         --\n",
+      "│    │    └─MaxPool2d: 3-3               [32, 32, 96, 154]         [32, 32, 48, 77]          --\n",
+      "│    └─Sequential: 2-2                   [32, 32, 48, 77]          [32, 32, 24, 39]          --\n",
+      "│    │    └─Conv2d: 3-4                  [32, 32, 48, 77]          [32, 32, 48, 77]          9,248\n",
+      "│    │    └─ReLU: 3-5                    [32, 32, 48, 77]          [32, 32, 48, 77]          --\n",
+      "│    │    └─MaxPool2d: 3-6               [32, 32, 48, 77]          [32, 32, 24, 39]          --\n",
+      "├─Flatten: 1-3                           [32, 32, 24, 39]          [32, 29952]               --\n",
+      "├─Sequential: 1-4                        [32, 29952]               [32, 100]                 --\n",
+      "│    └─Sequential: 2-3                   [32, 29952]               [32, 100]                 --\n",
+      "│    │    └─Linear: 3-7                  [32, 29952]               [32, 100]                 2,995,300\n",
+      "│    │    └─ReLU: 3-8                    [32, 100]                 [32, 100]                 --\n",
+      "│    └─Sequential: 2-4                   [32, 100]                 [32, 100]                 --\n",
+      "│    │    └─Linear: 3-9                  [32, 100]                 [32, 100]                 10,100\n",
+      "│    │    └─ReLU: 3-10                   [32, 100]                 [32, 100]                 --\n",
+      "├─Sequential: 1-5                        [32, 100]                 [32, 2448]                --\n",
+      "│    └─Linear: 2-5                       [32, 100]                 [32, 2448]                247,248\n",
+      "===================================================================================================================\n",
+      "Total params: 3,263,528\n",
+      "Trainable params: 3,263,528\n",
+      "Non-trainable params: 0\n",
+      "Total mult-adds (Units.GIGABYTES): 1.97\n",
+      "===================================================================================================================\n",
+      "Input size (MB): 3.54\n",
+      "Forward/backward pass size (MB): 152.07\n",
+      "Params size (MB): 13.05\n",
+      "Estimated Total Size (MB): 168.66\n",
+      "===================================================================================================================\n",
+      "Epoch   0/30\n",
+      "  1848.5s - train_loss: 0.05509 - val_loss: 0.01307\n",
+      "Epoch   1/30\n",
+      "  1805.5s - train_loss: 0.01300 - val_loss: 0.01305\n",
+      "Epoch   2/30\n",
+      "  1807.8s - train_loss: 0.01298 - val_loss: 0.01304\n",
+      "Epoch   3/30\n",
+      "  1850.0s - train_loss: 0.01297 - val_loss: 0.01303\n",
+      "Epoch   4/30\n",
+      "  1814.8s - train_loss: 0.01297 - val_loss: 0.01302\n",
+      "Epoch   5/30\n",
+      "  1816.6s - train_loss: 0.01296 - val_loss: 0.01300\n",
+      "Epoch   6/30\n",
+      "  1817.4s - train_loss: 0.01294 - val_loss: 0.01299\n",
+      "Epoch   7/30\n",
+      "  1819.7s - train_loss: 0.01292 - val_loss: 0.01295\n",
+      "Epoch   8/30\n",
+      "  1820.1s - train_loss: 0.01288 - val_loss: 0.01290\n",
+      "Epoch   9/30\n",
+      "  1825.3s - train_loss: 0.01282 - val_loss: 0.01288\n",
+      "Epoch  10/30\n",
+      "  1835.3s - train_loss: 0.01276 - val_loss: 0.01279\n",
+      "Epoch  11/30\n",
+      "  1868.7s - train_loss: 0.01272 - val_loss: 0.01277\n",
+      "Epoch  12/30\n",
+      "  1937.8s - train_loss: 0.01268 - val_loss: 0.01272\n",
+      "Epoch  13/30\n",
+      "  2059.2s - train_loss: 0.01265 - val_loss: 0.01269\n",
+      "Epoch  14/30\n",
+      "  2175.5s - train_loss: 0.01262 - val_loss: 0.01265\n",
+      "Epoch  15/30\n",
+      "  2189.8s - train_loss: 0.01259 - val_loss: 0.01263\n",
+      "Epoch  16/30\n",
+      "  2193.5s - train_loss: 0.01255 - val_loss: 0.01259\n",
+      "Epoch  17/30\n",
+      "  2196.2s - train_loss: 0.01252 - val_loss: 0.01257\n"
      ]
     }
    ],
@@ -270,14 +347,14 @@
     "# Visualize the model\n",
     "torchinfo.summary(\n",
     "    model,\n",
-    "    input_size=(config[\"data_loader\"][\"batch_size\"], 2448),\n",
+    "    input_size=(config[\"data_loader\"][\"batch_size\"], 2, 96, 144),\n",
     "    verbose=1,\n",
     "    col_names=(\"input_size\", \"output_size\", \"num_params\"),\n",
     ")\n",
     "\n",
-    "# Train the Model\n",
-    "# model.to(device)\n",
-    "# trainer.fit()"
+    "#Train the Model\n",
+    "model.to(device)\n",
+    "trainer.fit()"
    ]
   },
   {
@@ -313,8 +390,17 @@
    "outputs": [],
    "source": [
     "model.eval()\n",
-    "preds = model(x_test)"
+    "preds = model(x_test)\n",
+    "print(preds)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ab0c967-dacf-49ef-aaf8-c3d350e94ff3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
